--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 
-  
- .arrow {
+body {
+margin: 0;
+}
+
+.arrow {
  display: inline-block;
  width: 10px;
  height: 10px;
